# labs

./: .gitignore  CMakeLists.txt  a.out  main.cpp
include/: EquationSolvers.hpp  GradientEquationsSolvers.hpp  GradientSolvers.hpp  IterativeSolvers.hpp  MatrixStream.hpp  MesLib.h  Solver.hpp
src/: CMakeLists.txt  EquationSolvers.cpp  GradientSolvers.cpp  IterativeSolvers.cpp  MatrixStream.cpp  Solver.cpp
